--- a/android-engineer.html
+++ b/android-engineer.html
@@ -198,7 +198,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/juullabs/jobs/1772031'>Job Application for Android Engineer at JUUL Labs</a></h5> 
+<h5><a href='https://boards.greenhouse.io/juullabs/jobs/1772031'>Job Application for Android Engineer at JUUL Labs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Grow as a developer via company support for coding bootcamps, conferences, 
 and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?...</p>
@@ -231,7 +231,7 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/3d852f7a-63a0-4d00-86f5-0e98db6fda82'>Houzz - Android Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/houzz/3d852f7a-63a0-4d00-86f5-0e98db6fda82'>Houzz - Android Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -295,7 +295,7 @@ Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p
 <p><span class="badge badge-light">Bordeaux France</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4316376002'>Job Application for Senior Android Engineer at KeepTruckin</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4316376002'>Job Application for Senior Android Engineer at KeepTruckin</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -364,7 +364,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/M1Finance/743999690434822-android-engineer'>M1 Finance Android Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/M1Finance/743999690434822-android-engineer'>M1 Finance Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -372,11 +372,11 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1755716'>Job Application for Android Engineer at Omada Health</a></h5> 
+<h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1755716'>Job Application for Android Engineer at Omada Health</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/apartmentlist/28a59733-76eb-4496-bfef-c1595c7d3285'>Apartment List - Android Engineer - Search and Discovery</a></h5> 
+<h5><a href='https://jobs.lever.co/apartmentlist/28a59733-76eb-4496-bfef-c1595c7d3285'>Apartment List - Android Engineer - Search and Discovery</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
@@ -400,7 +400,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/prontoteam/0420bd71-32de-4d4c-9db2-c05eb6c88437'>Pronto - Senior Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/prontoteam/0420bd71-32de-4d4c-9db2-c05eb6c88437'>Pronto - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
@@ -424,11 +424,11 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999690329053--permanent-jobs-data-scientist-mobile-engineer-ios-android-director-of-engineering-consumer-journeys-salary-200-300k'>Bey (Permanent Jobs) Data Scientist, Mobile Engineer (iOS / Android), Director of Engineering (Consumer Journeys) - Salary: 200-300K | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999690329053--permanent-jobs-data-scientist-mobile-engineer-ios-android-director-of-engineering-consumer-journeys-salary-200-300k'>Bey (Permanent Jobs) Data Scientist, Mobile Engineer (iOS / Android), Director of Engineering (Consumer Journeys) - Salary: 200-300K | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-06-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/envoy/257bc561-a607-4d24-bb12-390edbd2e5f4'>Envoy - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/envoy/257bc561-a607-4d24-bb12-390edbd2e5f4'>Envoy - Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-24</p>
 <hr/>
